<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:focusableInTouchMode="true">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="1000dp"
        android:background="@drawable/blue_bg_reverse"
        android:gravity="center" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/whiteTextColor"
                    app:cardCornerRadius="15dp">

                    <TextView
                        android:id="@+id/text1"
                        style="@style/viewParent.headerText.NoMode"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:lineSpacingExtra="4dp"
                        android:text="@string/want_to_njoin_us_nregister_nhere"
                        android:textStyle="bold"
                        android:transitionName="logo_text" />

                    <ImageView
                        android:id="@+id/editProfileImage"
                        android:layout_width="200dp"
                        android:layout_height="150dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="175dp"
                        android:src="@drawable/ic_logo_img"
                        android:transitionName="logo_image" />

                </androidx.cardview.widget.CardView>

            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="@color/whiteTextColor"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/regName"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:backgroundTint="@color/white"
                        android:textColorHint="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/nameReg"
                            style="@style/modifiedEditText"
                            android:background="@drawable/options_unselected"
                            android:backgroundTint="@color/white"
                            android:hint="@string/name"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:textColorHint="@color/black"
                            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/regEmail"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:background="@drawable/options_unselected"
                        android:backgroundTint="@color/white"
                        android:textColorHint="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/regEmailBox"
                            style="@style/modifiedEditText"
                            android:background="@drawable/options_unselected"
                            android:backgroundTint="@color/white"
                            android:hint="@string/login_email_hint"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:textColorHint="@color/black"
                            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/registerNewPassword"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:background="@drawable/options_unselected"
                        android:backgroundTint="@color/white"
                        android:textColorHint="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/passReg"
                            style="@style/modifiedEditText"
                            android:background="@drawable/options_unselected"
                            android:backgroundTint="@color/white"
                            android:hint="@string/login_password_hint"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textColorHint="@color/black"
                            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/confirmPass1"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:background="@drawable/options_unselected"
                        android:backgroundTint="@color/white"
                        android:textColorHint="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/confirmPass"
                            style="@style/modifiedEditText"
                            android:background="@drawable/options_unselected"
                            android:backgroundTint="@color/white"
                            android:hint="@string/confirm_password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textColorHint="@color/black"
                            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/createNewButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/blue"
                    android:text="@string/register"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/blue"
                    android:onClick="onLoginRegisterActivityClick"
                    android:text="@string/already_have_an_account"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/createNewButton" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:cardBackgroundColor="@color/whiteTextColor"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:weightSum="12">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="3"
                        android:background="@color/colorPrimaryDark" />

                    <TextView
                        style="@style/viewParent.headerText.NoMode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:text="@string/register_using"
                        android:textAlignment="center"
                        android:textSize="12sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="3"
                        android:background="@color/colorPrimaryDark" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:cardBackgroundColor="@color/whiteTextColor"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="6dp"
                    android:layout_marginTop="7dp"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/fb" />

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="15dp"
                        android:src="@drawable/ic_google" />

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="15dp"
                        android:src="@drawable/linkedin" />

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="15dp"
                        android:src="@drawable/twitter" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>