<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WalletFragment">

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:background="@drawable/mast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_bold"
        android:text="My Wallet"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        app:cardBackgroundColor="@color/background_color"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_bold"
            android:text="Total Coins"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/currentCoins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:drawableLeft="@drawable/ic_coin"
            android:drawablePadding="5dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/_0"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/rupeesCalc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="300dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/_0"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/rupees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="275dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="@font/roboto_bold"
            android:text="Rs."
            android:textColor="@color/white" />

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/withdrawalPhoneBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/options_selected"
        android:drawableStart="@drawable/ic_payment"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/paytm_phone_number"
        android:inputType="phone"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <Button
        android:id="@+id/withdrawalSubmitButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/blue"
        android:text="@string/submit_request"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/withdrawalPhoneBox"
        app:layout_constraintStart_toStartOf="@+id/withdrawalPhoneBox"
        app:layout_constraintTop_toBottomOf="@+id/withdrawalPhoneBox" />

</androidx.constraintlayout.widget.ConstraintLayout>